--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
 </head>
 <body>
     <h1>Lasagna</h1>
+
+    <img src="https://www.allrecipes.com/thmb/yczY-fmMtRZHxrD8Q-_i4nsJZ1I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19344_homemade-lasagna_Rita2-3x2-1-7da94c32febf48dfbcc2d29b06f54e67.jpg"
+    alt="yummy lasagna">
+
+    <h2>Description</h2>
+    <p>"[This is] actually quite easy to make for someone who has never made lasagna before," according to jimbob2229. 
+        "I used ricotta instead of cottage cheese and added spinach. Everyone loved it, and I will definitely make it again."</p>
+    <p>"I didn't have any ground pork in the house, so I omitted that ingredient, but it was great with just the beef," says one 
+        Allrecipes community member. "The sauce came out terrific too, much better than the stuff you find in jars."</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Canned tomatoes</li>
+        <li>Fresh herbs</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Noodles</li>
+        <li>Cheese</li>
+        <li>Eggs</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+       <li>Cook the meat</li> 
+       <li>Cook the noodles</li>
+       <li>Make the cheese layer</li>
+       <li>Assemble the lasagna</li>
+       <li>Bake the lasagna</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
