--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/cookies.html">Cookies</a></li>
+        <li><a href="./recipes/smoothie.html">Smoothie</a></li>
+    </ul>
 </body>
 </html>
